Fix spacing of recent posts on homepage

--- a/_assets/stylesheets/_styles.scss
+++ b/_assets/stylesheets/_styles.scss
@@ -100,6 +100,13 @@ ul.blog-archive li {
     margin-bottom: 0.25em;
 }
 
+/* Recent posts on homepage */
+.recent-post {
+    margin: 2em 0 2em 0;
+
+    h3 { margin-bottom: 0.5em; }
+    p { margin-top: 0.5em; }
+}
 
 /* layout */
 body {
